--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ configurations {
 
 dependencies {
 	developmentOnly("org.springframework.boot:spring-boot-devtools")
+	implementation 'com.h2database:h2'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
