--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ configurations {
 dependencies {
 	developmentOnly("org.springframework.boot:spring-boot-devtools")
 	implementation 'com.h2database:h2'
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
