Remove form authentication and start implementing token authentication, to keep the app stateless and Rest compliant

--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ configurations {
 dependencies {
 	developmentOnly("org.springframework.boot:spring-boot-devtools")
 	implementation 'com.h2database:h2'
-	implementation 'io.io.jsonwebtoken:jjwt:0.9.1'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation 'org.springframework.boot:spring-boot-starter-cache'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
