Generate auth token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # h2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+# jwt
+forum.jwt.secret=D*F-JaNdRgUkXp2s5v8y/B?E(H+KbPeShVmYq3t6w9z$C&F)J@NcQfTjWnZr4u7x!A%D*G-KaPdSgUkXp2s5v8y/B?E(H+MbQeThWmYq3t6w9z$C&F)J@NcRfUjXn2r4
+forum.jwt.expiration=86400000
