--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,9 @@ spring.h2.console.path=/h2-console
 # jwt
 forum.jwt.secret=D*F-JaNdRgUkXp2s5v8y/B?E(H+KbPeShVmYq3t6w9z$C&F)J@NcQfTjWnZr4u7x!A%D*G-KaPdSgUkXp2s5v8y/B?E(H+MbQeThWmYq3t6w9z$C&F)J@NcRfUjXn2r4
 forum.jwt.expiration=86400000
+
+# actuator
+management.endpoint.health.show-details=always
+management.endpoint.web.exposure.include=*
+info.app.name=@project.name@
+info.app.version=@project.version@
