--- a/forum-api/build.gradle
+++ b/forum-api/build.gradle
@@ -23,6 +23,7 @@ configurations {
 dependencies {
 	developmentOnly("org.springframework.boot:spring-boot-devtools")
 	implementation 'com.h2database:h2'
+	implementation 'de.codecentric:spring-boot-admin-starter-client:2.1.4'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation 'io.springfox:springfox-swagger2:2.9.2'
 	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
