--- a/forum-api/src/main/resources/application.properties
+++ b/forum-api/src/main/resources/application.properties
@@ -23,3 +23,6 @@ management.endpoint.health.show-details=always
 management.endpoint.web.exposure.include=*
 info.app.name=@project.name@
 info.app.version=@project.version@
+
+# spring boot admin
+spring.boot.admin.client.url=http://localhost:8081
